tests/fixtures/invalid/bin_no_args.py
# bin() requires at least 1 argument
x = bin()
